--- a/MyFirstAPIWithAlura/appsettings.json
+++ b/MyFirstAPIWithAlura/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FilmeConnection" : "server=localhost;database=filmeDb;user=root;password=root"
+    "FilmeConnection": "Server=127.0.0.1;Database=FilmesDb;Uid=root;Pwd=NewPassword"
   }
 }
